--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+<body style="background:linear-gradient(limegreen,transparent),
+linear-gradient(90deg,coral,transparent)">
     <div style="display:flex;flex-direction:row;align-items:center;justify-content:center;font-size:25px;font-weight:bold;">
         git pages
     </div>
