--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>float picture</title>
 </head>
 <body style="background:linear-gradient(limegreen,transparent),
 linear-gradient(90deg,coral,transparent)">
     <div style="display:flex;flex-direction:row;align-items:center;justify-content:center;font-size:25px;font-weight:bold;">
         git pages
     </div>
+    <div ><img src="images/nature-pirs-les-derevya-ozero-otrazhenie-83749.jpeg" alt="" style="width:600;height:600px;float:right;" ><font color="red">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat possimus asperiores quisquam aliquam reprehenderit eveniet, dicta debitis quo deserunt autem, totam nostrum placeat iste repudiandae rerum. Repellendus incidunt beatae sapiente!</font></div>
 </body>
 </html>
